--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -7,13 +7,19 @@ p,h1,h2,h3{
 }
 
 #how-button__text {
-    width: 114px;
-    font-size: 8px;
-    font-size: 14px;
-    line-height: 194%;
+	font-family: 'DM Sans';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 162%;
+
+    width: 220px;
+    // font-size: 8px;
+    // font-size: 14px;
+    // line-height: 194%;
     color: $gray-color;
     display: none;
-	width: auto;
+
   }
 
 
@@ -21,7 +27,6 @@ p,h1,h2,h3{
 		font-style: normal;
 		font-weight: 400;
 		text-align: center;
-		text-transform: uppercase;
 		margin: 0px auto;
 		position: relative;
 		background-color: $secondary-background-color;
@@ -33,6 +38,8 @@ p,h1,h2,h3{
 		color: $secondary-color;
 		margin: 0px;
 		padding-top: 60px;
+		padding-bottom: 15px;
+		text-transform: uppercase;
    }
 
    &__title{
@@ -41,6 +48,7 @@ p,h1,h2,h3{
 		line-height: 39px;
 		letter-spacing: 0.04em;
 		color: $primary-color;
+		text-transform: uppercase;
    }
    
 }
@@ -57,6 +65,7 @@ p,h1,h2,h3{
 
     &__image{
 		width:280px;
+		padding-bottom: 40px;
     }
 
     &__text{
@@ -92,13 +101,16 @@ p,h1,h2,h3{
     
     // font-size: 16px;
     // line-height: 176%;
-    // color: $black-color;
     // padding-top: 90px;
-	width: 220px;
+	// width: 220px;
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
 	color: $black-color;
+	padding-top: 40px;
+	width: 220px;
+	padding-bottom: 40px;
+
 	
 }
 
@@ -111,7 +123,7 @@ p,h1,h2,h3{
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-	color: $gray-color;
+	margin-bottom: 15px;
 	
 }
 
@@ -121,7 +133,8 @@ p,h1,h2,h3{
 	position: absolute;
 	width: 280px;
 	height: 133px;
-	bottom: 376px;
+	// bottom: 195px;
+	top: 148px;
 }
 
 .made-section__text--text3{
@@ -133,7 +146,7 @@ p,h1,h2,h3{
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-	color: $gray-color;
+	margin-bottom: 20px;
 }
 
 .container{
@@ -165,8 +178,7 @@ p,h1,h2,h3{
 
     &__svg{
         fill: $svg-background;
-
-        margin-bottom: 40px;
+        margin-bottom: 16px;
 		display: inline-block;
     }
 
@@ -188,6 +200,7 @@ p,h1,h2,h3{
 		font-size: 12px;
 		line-height: 170%;
         color: $black-color;
+		width: 230px;
         // text-align: left;
     }
 
@@ -243,7 +256,7 @@ p,h1,h2,h3{
 		font-size: 16px;
 		line-height: 21px;
 		}
-		
+
 	.quantity{
 		&__title{
 			font-size: 48px;
