--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -12,20 +12,20 @@ p, h1, h2, h3 {
 }
 
 #how-button__text {
-  width: 114px;
-  font-size: 8px;
-  font-size: 14px;
-  line-height: 194%;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 162%;
+  width: 220px;
   color: #907e82;
   display: none;
-  width: auto;
 }
 
 .made {
   font-style: normal;
   font-weight: 400;
   text-align: center;
-  text-transform: uppercase;
   margin: 0px auto;
   position: relative;
   background-color: #fff5f6;
@@ -37,6 +37,8 @@ p, h1, h2, h3 {
   color: #ffa5ba;
   margin: 0px;
   padding-top: 60px;
+  padding-bottom: 15px;
+  text-transform: uppercase;
 }
 .made__title {
   font-family: "Titan One";
@@ -44,6 +46,7 @@ p, h1, h2, h3 {
   line-height: 39px;
   letter-spacing: 0.04em;
   color: #d41443;
+  text-transform: uppercase;
 }
 
 .made-section {
@@ -54,6 +57,7 @@ p, h1, h2, h3 {
 }
 .made-section__image {
   width: 280px;
+  padding-bottom: 40px;
 }
 .made-section__text {
   font-weight: 500;
@@ -78,11 +82,13 @@ p, h1, h2, h3 {
 }
 
 .made-section__text--text1 {
-  width: 220px;
   font-weight: 500;
   font-size: 12px;
   line-height: 162%;
   color: #000000;
+  padding-top: 40px;
+  width: 220px;
+  padding-bottom: 40px;
 }
 
 .made-section__text--text2 {
@@ -93,7 +99,7 @@ p, h1, h2, h3 {
   font-weight: 500;
   font-size: 12px;
   line-height: 162%;
-  color: #907e82;
+  margin-bottom: 15px;
 }
 
 .made-section__background-container {
@@ -102,7 +108,7 @@ p, h1, h2, h3 {
   position: absolute;
   width: 280px;
   height: 133px;
-  bottom: 376px;
+  top: 148px;
 }
 
 .made-section__text--text3 {
@@ -113,7 +119,7 @@ p, h1, h2, h3 {
   font-weight: 500;
   font-size: 12px;
   line-height: 162%;
-  color: #907e82;
+  margin-bottom: 20px;
 }
 
 .container {
@@ -139,7 +145,7 @@ p, h1, h2, h3 {
 }
 .quantity__svg {
   fill: #fea5bb;
-  margin-bottom: 40px;
+  margin-bottom: 16px;
   display: inline-block;
 }
 .quantity__title {
@@ -157,6 +163,7 @@ p, h1, h2, h3 {
   font-size: 12px;
   line-height: 170%;
   color: #000000;
+  width: 230px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
