--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -28,6 +28,12 @@
     // max-width: 100%;
     height: auto;
     padding-right: 3px;
+    &:focus img {
+      box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);
+      cursor: pointer;
+      transform: scale(1.25);
+      transition: transform 0.3s;
+    }
   }
 }
 
@@ -51,6 +57,12 @@
     &__grid picture {
       border-radius: 20px;
       padding: 0px 6px 6px 0px;
+      &:focus img {
+        box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);
+        cursor: pointer;
+        transform: scale(1.25);
+        transition: transform 0.3s;
+      }
     }
   }
   
