add-picture-shake-motion
Am adaugat pe poza cea mare din galerie un shake animation

--- a/src/partials/gallery-section.html
+++ b/src/partials/gallery-section.html
@@ -27,7 +27,7 @@
                 </picture>
             </div>
             <div>
-                <picture>
+                <picture class="shake2">
                     <source media="screen and (max-width: 767px)"
                         srcset="images/home4-m.jpg 1x, images/home4-m@2x.jpg 2x" width="89" height="90" />
                     <source media="screen and (min-width: 768px) and (max-width: 1279px)"
