--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -103,4 +103,10 @@
   .gallery__fourth-item {
     padding-top: 50px;
   }
+  .shake2 {
+    img:hover {
+      animation: shake 2s;
+      animation-iteration-count: infinite;
+    }
+  }
 }
