--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -338,18 +338,22 @@
   }
 }
 .header {
+  &__icon{
+  margin-right: 41px;
   padding: 0;
 }
+  .__menu-btn {
+    display: initial;
 .hero{
-    padding: 151px 0 158px 0;
-    &__title{
-      font-size: 26px;
-      line-height: 30px;
+  padding: 151px 0 158px 0;
+  &__title{
+  font-size: 26px;
+  line-height: 30px;
     }
   &__img,
-    .sell-point,
-    .info{
-    display:none;
+  .sell-point,
+  .info{
+  display:none;
   }
 } 
 .no-display {
