--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -132,6 +132,27 @@
     &__img {
       display: block;
       margin: 91px 0 -60px 0;
+       animation: vibrate-2 0.3s 1100ms linear infinite both;
+      @keyframes vibrate-2 {
+        0% {
+          transform: translate(0);
+        }
+        20% {
+          transform: translate(2px, -2px);
+        }
+        40% {
+          transform: translate(2px, 2px);
+        }
+        60% {
+          transform: translate(-2px, 2px);
+        }
+        80% {
+          transform: translate(-2px, -2px);
+        }
+        100% {
+          transform: translate(0);
+        }
+      }
       }
   
       &__link {
@@ -152,6 +173,22 @@
     display: flex;
     flex-direction: row;
     margin: 40px 0 0 0;
+    &__img{
+       animation: animate-milk 7500ms infinite 3000ms;
+      @keyframes animate-milk {
+        0% {
+          transform: scale(1);
+        }
+
+        50% {
+          transform: scale(1.15);
+        }
+
+        100% {
+          transform: scale(1);
+        }
+      }
+    }
   
     &__side {
       width: 200px;
