--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -7,7 +7,7 @@
         <nav class="no-display">
         <ul class="header__list">
           <li><a class="header__item" href="#home">Home</a></li>
-          <li><a class="header__item" href="#home">About us</a></li>
+          <li><a class="header__item" href="#about">About us</a></li>
           <li><a class="header__item" href="#about">How it’s made?</a></li>
           <li><a class="header__item" href="#products">Our products</a></li>
           <li><a class="header__item" href="#footer">Contact</a></li>
