update header mobile menu

--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -26,11 +26,23 @@
         </li>
       </ul>
     </nav>
-    <button type="button" class="btn-burger" data-menu-open>
-      <svg class="btn-burger__icon" width="20" height="12">
-        <use href="./images/sprite.svg#icon-Burger"></use>
-      </svg>
-    </button>
+    <button
+          class="btn-burger menu-toggle js-open-menu data-modal-open"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg
+            width="46"
+            height="32"
+           viewBox="0 0 46 32"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 2.286h45.714"></path>
+            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 16h45.714"></path>
+            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 29.714h45.714"></path>
+           
+          </svg>
+      </button>
     <button class="btn-nav" type="button"><span class="bounce">
       Buy now
       <svg class="btn-nav__svg" width="4px" height="8px">
@@ -64,6 +76,7 @@
           <p class="hero__number-list-nr">16
             <span class="hero__number-list-text">cafes</span>
           </p>
+          
         </li>
         <li class="hero__number-list-item">
           <p class="hero__number-list-nr">23<span class="hero__number-list-text">food trucks</span></p>
