--- a/src/sass/components/_advantages-section.scss
+++ b/src/sass/components/_advantages-section.scss
@@ -51,7 +51,7 @@
   }
 
   &__list-number {
-    display: block;
+    display: inline-block;
     margin-bottom: 30px;
     font-family: $secondFamily;
     font-weight: 400;
@@ -61,6 +61,8 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primaryColor;
+    animation: flip 5s infinite;
+    animation-delay: calc(.2s * var(--i))
   }
 }
 
