--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,5 +1,8 @@
 @import 'src/sass/utils/_vars.scss';
  
+
+
+
 .footer__container {
   padding-left: 20px;
   padding-right: 20px;
@@ -34,6 +37,10 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #d41443;
+    background-color: #fff5f6;;
+    transform: translatey(0px);
+    animation: float 6s ease-in-out infinite;
+     
      }
 
   &__social-list {
