--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -33,3 +33,30 @@
       transform: translate3d(4px, 0, 0);
     }
   }
+
+  @keyframes wave {
+    0% {transform: translateX(0);}
+    50% {transform: translateX(-25%);}
+    100% {transform: translateX(-50%);}
+}
+ 
+@keyframes float {
+	0% {
+		
+		transform: translatey(0px);
+	}
+	50% {
+		
+		transform: translatey(-20px);
+	}
+	100% {
+		
+		transform: translatey(0px);
+	}
+}
+
+@keyframes flip {
+  0%,80% {
+    transform: rotateY(360deg) 
+  }
+}
