--- a/src/partials/about-section.html
+++ b/src/partials/about-section.html
@@ -1,7 +1,9 @@
 <section class="about">
-  <div class="container">
+  <div class="container about-section">
+    <div class="name-wrapper">
   <h3 class="about__label">tradition and love</h3>
   <h2 class="about__title">how it’s made?</h2>
+  </div>
   <div class="about__main">
       <picture class="about__picture milk-shake">
         <source srcset="./images/home-pic4.png 1x, ./images/home-pic4@2x.png 2x" media="(min-width: 1280px)"/>
