--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -2,6 +2,37 @@
 @import 'src/sass/utils/_vars.scss';
 @import 'src/sass/utils/_keyframes.scss';
 
+.about-section {
+display: flex;
+flex-direction: column;
+align-items: center;
+padding-left: 20px;
+padding-right: 20px;
+} 
+
+.name-wrapper{
+  width:200px;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+}
+ 
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .about__content {
+    background-image: url(../images/sectionbg1ph.png);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (min-resolution: 192dpi),
+  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+    .about__main {
+      background-image: url(../images/sectionbg.png);
+    }
+}
+
 .about {
   background-color: $secondBackgroundColor;
   padding-top: 60px;
@@ -25,20 +56,7 @@
     line-height: 39px;
     color: $primaryColor;
   }
-  &__main {
-    background-image: url(../images/sectionbg1ph.png);
-    background-repeat: no-repeat;
-    background-position: left;
-  }
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .about__main {
-      background-image: url(../images/sectionbg1ph@2x.png);
-    }
-  }
-
-  &__picture {
+    &__picture {
     display: block;
     margin-bottom: 40px;
   }
@@ -48,12 +66,13 @@
   }
 
   &__content {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 500;
+       font-weight: 500;
     font-size: 12px;
     max-width: 220px;
     line-height: 162%;
+    background-image: url(../images/sectionbg1ph.png);
+  background-repeat: no-repeat;
+  background-position: left;
   }
 
   &__content-text {
@@ -128,7 +147,7 @@
     &__main {
       display: flex;
       background-color: #fff5f6;
-      background-image: none;
+      
     }
 
     &__picture {
@@ -142,9 +161,7 @@
     }
 
     &__content {
-      font-family: 'DM Sans';
-      font-style: normal;
-      font-weight: 500;
+       font-weight: 500;
       font-size: 14px;
       list-style: 25px;
       max-width: 334px;
@@ -165,14 +182,7 @@
 }
 
 @media screen and (min-width: 1280px) {
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .about__main {
-      background-image: url(../images/sectionbg@2x.png);
-    }
-  }
-
+  
   .milk-shake:hover {
     animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
@@ -197,14 +207,13 @@
     }
 
     &__content {
-      font-family: 'DM Sans';
-      font-style: normal;
       font-weight: 500;
       font-size: 16px;
       list-style: 28px;
       max-width: 463px;
       margin-right: 121px;
       padding-top: 90px;
+      background-image: none;
     }
 
     &__content-text {
