--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
   </head> -->
-<div class="products-section-container">
   <section class="products" id="products">
+    <div class="products-section-container"></div>
     <p class="products__subtitle">100% natural</p>
     <h2 class="products__title">Products</h2>
     <ul class="products__list">
@@ -91,7 +91,8 @@
         </div>
       </li>
     </ul>
+    </div>
   </section>
-</div>
+
 <!-- <script src="./js/products.js"></script> -->
 <!-- </html> -->
