--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -5,6 +5,17 @@ $font-family_1: 'Titan One';
 $font-family_2: 'DM Sans';
 $background-color_1: #fff0f5;
 
+@media screen and (max-width: 480px) {
+  .products__list {
+    display: grid;
+    grid-template-columns: repeat(1, 280px);
+    grid-auto-rows: auto;
+    gap: 32px;
+    justify-content: center;
+    padding-inline-start: 0px;
+  }
+}
+
 .products-section-container {
   width: 480px;
   margin: 0 auto;
@@ -16,20 +27,19 @@ ul {
 .products__subtitle {
   font-family: $font-family_1;
   font-weight: 400;
-  font-size: 30px;
-  line-height: 34px;
+  font-size: 18px;
+  line-height: 21px;
   text-align: center;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $color_1;
 }
 .products__title {
   font-family: $font-family_1;
   font-weight: 400;
-  font-size: 58px;
-  line-height: 66px;
+  font-size: 34px;
+  line-height: 39px;
   text-align: center;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $color_2;
 }
@@ -56,7 +66,7 @@ ul {
     &::before {
       content: '';
       position: absolute;
-      top: 1900px;
+      top: 1200px;
       width: 280px;
       height: 280px;
       background-image: url(/src/images/products/icecoffee-m.png);
@@ -69,7 +79,7 @@ ul {
     &::before {
       content: '';
       position: absolute;
-      top: 2600px;
+      top: 1900px;
       width: 280px;
       height: 280px;
       background-image: url(/src/images/products/milkshake-m.png);
@@ -79,7 +89,7 @@ ul {
   &::before {
     content: '';
     position: absolute;
-    top: 1200px;
+    top: 500px;
     width: 280px;
     height: 280px;
     background-image: url(/src/images/products/icrecream-m.png);
@@ -213,6 +223,26 @@ ul {
 }
 
 @media screen and (min-width: 768px) {
+  .products__subtitle {
+    font-family: $font-family_1;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color_1;
+  }
+  .products__title {
+    font-family: $font-family_1;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 55px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $color_2;
+  }
   .products-section-container {
     width: 768px;
   }
@@ -231,7 +261,7 @@ ul {
     &::before {
       content: '';
       position: absolute;
-      top: 1200px;
+      top: 880px;
       width: 224px;
       height: 224px;
       background-image: url(/src/images/products/icecream-t.png);
@@ -241,7 +271,7 @@ ul {
       &::before {
         content: '';
         position: absolute;
-        top: 1200px;
+        top: 880px;
         width: 224px;
         height: 224px;
         background-image: url(/src/images/products/icecoffee-t.png);
@@ -252,7 +282,7 @@ ul {
       &::before {
         content: '';
         position: absolute;
-        top: 1200px;
+        top: 880px;
         width: 224px;
         height: 224px;
         background-image: url(/src/images/products/milkshake-t.png);
@@ -288,7 +318,7 @@ ul {
     justify-content: center;
     border-radius: 24px;
     margin-left: 5px;
-    top: 1400px;
+    top: 1050px;
   }
   .products__type {
     padding-top: 90px;
@@ -317,6 +347,27 @@ ul {
   }
 }
 @media screen and (min-width: 1200px) {
+  .products__subtitle {
+    font-family: $font-family_1;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $color_1;
+  }
+  .products__title {
+    font-family: $font-family_1;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: $color_2;
+  }
   .products-section-container {
     width: 1200px;
   }
@@ -336,7 +387,7 @@ ul {
     &::before {
       content: '';
       position: absolute;
-      top: 770px;
+      top: 870px;
       width: 368px;
       height: 394px;
       background-image: url(/src/images/products/icecream.png);
@@ -346,7 +397,7 @@ ul {
       &::before {
         content: '';
         position: absolute;
-        top: 770px;
+        top: 870px;
         width: 368px;
         height: 394px;
         background-image: url(/src/images/products/icecoffee.png);
@@ -357,7 +408,7 @@ ul {
       &::before {
         content: '';
         position: absolute;
-        top: 770px;
+        top: 870px;
         width: 368px;
         height: 394px;
         background-image: url(/src/images/products/milkshake.png);
@@ -393,7 +444,7 @@ ul {
     justify-content: center;
     border-radius: 24px;
     margin-left: 10px;
-    top: 1100px;
+    top: 1200px;
   }
   .products__type {
     padding-top: 150px;
