--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
     <button
-          class="btn-burger menu-toggle js-open-menu data-modal-open"
+          class="menu-toggle js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
