--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -52,13 +52,18 @@ height: 26px;
 .arrow-button .bounce:focus,
 .contacts-list-btn__item-franchise .bounce:focus,
 .hero__btn-type-first .bounce:focus,
-  .hero__btn-type-second .bounce:focus {
+  .hero__btn-type-second .bounce:focus,
+  .btn-nav--mod .bounce:focus,
+  .btn-nav--mod .bounce:hover
+  {
   animation-name: bounce-left;
   animation-duration: 1s;
   animation-timing-function: ease;
   animation-delay: 0s;
   animation-iteration-count: 1;
  }
+
+
 
 @media screen and (min-width: 768px) {
   .container {
