--- a/src/partials/modal-meniu.html
+++ b/src/partials/modal-meniu.html
@@ -1,8 +1,27 @@
-<div class="mobile-menu" data-menu>
-     
-  
+<div class="menu-container js-menu-container" id="mobile-menu">
+  <button class="menu-toggle js-close-menu">
+    <svg
+      fill= "#212121"
+      viewBox="0 0 20 20"
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+        clip-rule="evenodd"
+      ></path>
+    </svg>
+  </button>
+  <button class="btn-nav btn-nav--mod" type="button"><span class="bounce">
+    Buy now
+    <svg class="btn-nav__svg" width="4px" height="8px">
+      <use href="./images/sprite.svg#icon-Vector-1"></use>
+    </svg></span>
+  </button>
     <ul class="mobile-menu__list unstyled-list">
-      <li class="mobile-menu__item">
+        <li class="mobile-menu__item">
         <a href="" class="mobile-menu__link mobile-menu__link--current">Home</a>
       </li>
       <li class="mobile-menu__item">
@@ -19,9 +38,5 @@
       </li>
     </ul>
   
-    <button type="button" class="close__btn btn" data-menu-close>
-      <!-- <svg class="close__btn--svg" width="14px" height="14px">
-        <use href="../src/images/icons/icons.svg#icon-close"></use>
-      </svg> -->
-    </button>
+     
   </div>
