--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -14,11 +14,11 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic11.jpg 1x, ./images/home-pic11-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-1" 
-                    src="./images/home-pic11.jpg" 
+                    src="./images/home-pic-M-11.jpg" 
                     alt="" >
                 </picture>
             </li>
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-first">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -30,7 +30,7 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic21.jpg 1x, ./images/home-pic21-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-2" 
-                    src="./images/home-pic21.jpg"
+                    src="./images/home-pic-M-21.jpg"
                      alt="">
                 </picture>
                 <picture>
@@ -44,11 +44,11 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic22.jpg 1x, ./images/home-pic22-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-3" 
-                    src="./images/home-pic22.jpg" 
+                    src="./images/home-pic-M-22.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-second">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -60,7 +60,7 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic31.jpg 1x, ./images/home-pic31-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-4" 
-                    src="./images/home-pic31.jpg" 
+                    src="./images/home-pic-M-31.jpg" 
                     alt="">
                 </picture>
                 <picture>
@@ -74,11 +74,11 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic32.jpg 1x, ./images/home-pic32-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-5" 
-                    src="./images/home-pic32.jpg" 
+                    src="./images/home-pic-M-32.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-third">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -90,7 +90,7 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic41.jpg 1x, ./images/home-pic41-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-6" 
-                    src="./images/home-pic41.jpg" 
+                    src="./images/home-pic-M-41.jpg" 
                     alt="">
                 </picture>
                 <picture>
@@ -104,11 +104,11 @@
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic42.jpg 1x, ./images/home-pic42-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-7" 
-                    src="./images/home-pic42.jpg" 
+                    src="./images/home-pic-M-42.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-fourth">
                 <picture>
                 <source 
                     media="screen and (max-width:767px)" 
@@ -119,8 +119,8 @@
                 <source 
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic51.jpg 1x, ./images/home-pic51-@2x.jpg 2x" />
-                <img class="galler__list-pictures picture-8" 
-                    src="./images/home-pic51.jpg" 
+                <img class="gallery__list-pictures picture-8" 
+                    src="./images/home-pic-M-51.jpg" 
                     alt="">
                 </picture>
                 <picture>
@@ -134,11 +134,11 @@
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic52.jpg 1x, ./images/home-pic52-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-9" 
-                    src="./images/home-pic52.jpg" 
+                    src="./images/home-pic-M-52.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery__list-column">
+            <li class="gallery__list-column-fifth">
                <picture>
                 <source 
                     media="screen and (max-width:767px)" 
@@ -150,7 +150,7 @@
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic61.jpg 1x, ./images/home-pic61-@2x.jpg 2x" />
                 <img class="gallery__list-pictures picture-10" 
-                    src="./images/home-pic61.jpg" 
+                    src="./images/home-pic-M-61.jpg" 
                     alt="">
                </picture>
             </li>
