--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -41,10 +41,14 @@
 
 .gallery {
     background: var(--brand-color-background);
+    margin: 0px auto;
 }
 
-.galler__container {
-    padding-bottom: 100px;
+.gallery__container {
+    // padding-bottom: 100px;
+    // max-width: 480px;
+    display: flex;
+    justify-content: center;
 }
 
 .gallery__title {
@@ -57,7 +61,7 @@
     align-items: center;
     justify-content: center;
     list-style: none;
-    gap: 9px;
+    gap: 3px;
 }
 
 .gallery__list > li {
@@ -66,16 +70,16 @@
 
 .gallery {
     &__list-pictures {
-    border-radius: 20px;
-    margin-bottom: 9px;
+    border-radius: 8px;
+    margin-bottom: 3px;
     }
-    &__list-column-1 {
+    &__list-column-first {
         margin-bottom: 40px;
     }
-    &__list-column-4 {
+    &__list-column-fourth {
         margin-top: 60px;
     }
-    &__list-column-5 {
+    &__list-column-fifth {
         margin-bottom: 60px;
     }
 }
@@ -134,12 +138,21 @@
     .gallery {
         max-width: 480px;
     }
-    .gallery-list {
+    .gallery__list {
         gap: 3px;
     }
-    .gallery-list__pictures {
+    .gallery__list-pictures {
         margin-bottom: 3px;
         border-radius: 8px;
+    }
+    gallery__list-column-first {
+        margin-bottom: 40px;
+    }
+    gallery__list-column-fourth {
+        margin-top: 30px;
+    }
+    gallery__list-column-fifth {
+        margin-bottom: 30px;
     }
 }
 
@@ -147,16 +160,32 @@
     .gallery {
         max-width: 768px;
     }
-    .gallery-list {
+    .gallery__list {
         gap: 5px;
     }
-    .gallery-list__pictures {
+    .gallery__list-pictures {
         margin-bottom: 5px;
+    }
+    gallery__list-column-first {
+        margin-bottom: 40px;
+    }
+    gallery__list-column-fourth {
+        margin-top: 45px;
+    }
+    gallery__list-column-fifth {
+        margin-bottom: 45px;
     }
 }
 
 @media screen and (min-width: 1200px) {
     .gallery {
         max-width: 1200px;
+    }
+    .gallery__list {
+        gap: 9px;
+    }
+    .gallery__list-pictures {
+        margin-bottom: 9px;
+        border-radius: 20px;
     }
 }
