--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -15,7 +15,7 @@
   gap: 15px;
   display: flex;
   flex-direction: column;
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 @media screen and (min-device-pixel-ratio: 2),
@@ -135,7 +135,7 @@
     gap: 16px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
   }
   .about-section {
     padding-left: 32px;
@@ -214,7 +214,7 @@
     gap: 16px;
     display: flex;
     flex-direction: column;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
   .about {
     &__main {
