--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: #fff5f6;
+  margin-top: 0px;
 }
 .container-footer {
   @media screen and (min-width: 768px) {
@@ -30,14 +31,12 @@
     text-transform: uppercase;
     color: #ffa5ba;
     width: 232px;
-    margin-bottom: 17px;
+    margin-bottom: -30px;
 
     @media screen and (min-width: 768px) {
-      margin-bottom: 16px;
       width: 340px;
     }
     @media screen and (min-width: 1280px) {
-      margin-bottom: 15px;
       width: 472px;
     }
   }
