--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,403 +1,402 @@
 .header-section {
-    padding: 0 16px;
-    background: #ffb8ca;
-    background-repeat: no-repeat;
-    background-image:  url("../images/header/header-icecream.png"), url("../images/header/header-elipse.png");
-   background-position:  top 100% right 37%, top 40% right 25%;
-  }
-   @media (min-device-pixel-ratio: 2),
+  padding: 0 16px;
+  background: #ffb8ca;
+  background-repeat: no-repeat;
+  background-image: url('../images/header/header-icecream.png'),
+    url('../images/header/header-elipse.png');
+  background-position: top 100% right 37%, top 40% right 25%;
+}
+@media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .header-section {
-    background-position:  top 100% right 37%, top 40% right 25%;
-    background-image: url("../images/header/header-icecream@2x.jpg"), url("../images/header/header-elipse@2x.png");
+    background-position: top 100% right 37%, top 40% right 25%;
+    background-image: url('../images/header/header-icecream@2x.jpg'),
+      url('../images/header/header-elipse@2x.png');
   }
 }
 .menu-container {
   display: none;
 }
-  .header {
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding-top: 37px;
-    &__icon {
-      margin: 0 auto 0 0;
-    }
-    &__list {
-      display: flex;
-      flex-direction: row;
-      gap: 35px;
-      list-style: none;
-      margin: 0 auto 0 auto;
-      padding: 0;
-    }
-    &__item {
-      font-family: "DM Sans";
-      font-style: normal;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 21px;
-      display: flex;
-      align-items: center;
-      color: #ffffff;
-      text-decoration: none;
-      &:hover,
-      &:focus {
-        color: #D41443;
-        cursor: pointer;
+.header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 37px;
+  &__icon {
+    margin: 0 auto 0 0;
   }
-}
-  
-    &__buy-btn {
-      font-family: "DM Sans";
-      font-style: normal;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 21px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      color: #d41443;
-      background: #ffffff;
-      border: none;
-      border-radius: 22px;
-      margin: 0 0 0 auto;
-      padding: 12px 53px 12px 37px;
-      &:hover,
-      &:focus {
-        background: #ECEBEB;
-        cursor: pointer;
-      }
-    }
-
-    &__menu-btn {
-      background-color: transparent;
-      border:none;
-      display:none;
-    }
-  }
-
-   .hero {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 60px 0 60px 0;
-
-    &__title {
-      font-family: 'Titan One';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 38px;
-      line-height: 44px;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: #FFFFFF;
-    }
-  
-    &__title--color-red {
-      color: #d41443;
-    }
-  
-    &__btns {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      gap: 12px;
-      padding: 0;
-    }
-  
-    &__btn {
-      color:#ffffff;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      padding: 11px 23px;
-      background: #d41443;
-      border-radius: 20px;
-      border: none;
-    }
-  
-    &__btn--white {
-      color:#D41443;
-      background: #ffffff;
-      &:hover,
-      &:focus {
-        background: #ECEBEB;
-        cursor: pointer;
-    }
-  }
-
-    &__img {
-      display: block;
-      margin: 91px 0 -60px 0;
-       animation: vibrate-2 0.3s 1100ms linear infinite both;
-      @keyframes vibrate-2 {
-        0% {
-          transform: translate(0);
-        }
-        20% {
-          transform: translate(2px, -2px);
-        }
-        40% {
-          transform: translate(2px, 2px);
-        }
-        60% {
-          transform: translate(-2px, 2px);
-        }
-        80% {
-          transform: translate(-2px, -2px);
-        }
-        100% {
-          transform: translate(0);
-        }
-      }
-      }
-  
-      &__link {
-        font-family: "DM Sans";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 18px;
-        color: #ffffff;
-        text-decoration: none;
-        &--red {
-          color: #d41443;
-        }
-  }
-}
-  
-  .info {
+  &__list {
     display: flex;
     flex-direction: row;
-    margin: 40px 0 0 0;
-    &__img{
-       animation: animate-milk 7500ms infinite 3000ms;
-      @keyframes animate-milk {
-        0% {
-          transform: scale(1);
-        }
-
-        50% {
-          transform: scale(1.15);
-        }
-
-        100% {
-          transform: scale(1);
-        }
-      }
-    }
-  
-    &__side {
-      width: 200px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin: 0;
-    }
-  
-    &__text {
-      font-family: "DM Sans";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 140%;
-      color: #ffffff;
-      margin: 68px 0 0 0;
-    }
-  
-    &__btn {
-      width: 26px;
-      height: 26px;
-      border: none;
-      border-radius: 13px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #FFFFFF;
-      &:hover,
-      &:focus {
-        background: #ECEBEB;
-        cursor: pointer;
-    }
-   }
+    gap: 35px;
+    list-style: none;
+    margin: 0 auto 0 auto;
+    padding: 0;
   }
-  .sell-point {
+  &__item {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    text-decoration: none;
+    &:hover,
+    &:focus {
+      color: #d41443;
+      cursor: pointer;
+    }
+  }
+
+  &__buy-btn {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #d41443;
+    background: #ffffff;
+    border: none;
+    border-radius: 22px;
+    margin: 0 0 0 auto;
+    padding: 12px 53px 12px 37px;
+    &:hover,
+    &:focus {
+      background: #ecebeb;
+      cursor: pointer;
+    }
+  }
+
+  &__menu-btn {
+    background-color: transparent;
+    border: none;
+    display: none;
+  }
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 60px 0 60px 0;
+
+  &__title {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 44px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+
+  &__title--color-red {
+    color: #d41443;
+  }
+
+  &__btns {
     list-style: none;
     display: flex;
-    flex-direction: column;
-    gap: 18px;
-    padding:0 ;
-    align-items: flex-end;
-  
-    &__item {
-     display: flex;
-     flex-direction: column;
-     align-items: flex-end;
-    }
+    flex-direction: row;
+    gap: 12px;
+    padding: 0;
+  }
 
-    &__no {
-      font-family: 'Titan One';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 46px;
-      line-height: 53px;
-      text-align: right;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: #D41443;
-      margin: -23px 10px 0 0;
-    }
-
-    &__type {
-      font-family: 'DM Sans';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 18px;
-      text-align: right;
-      color: #FFFFFF;
-      margin: 0;
-    }
-  }
-@media (max-width: 768px) and (min-width: 321px) {
-   .header-section {
-    padding: 0 16px;
-    background: #ffb8ca;
-    background-repeat: no-repeat;
-    background-image:  url("../images/header/header-icecream-t.png"), url("../images/header/elipse-t.png");
-    background-position:  top 50% right 57%, top 60% right 43%;
-    padding: 0 32px;
-  }
-  @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .header-section {
-    background-position:  top 50% right 57%, top 60% right 43%;
-    background-image: url("../images/header/header-icecream-t@2x.png"), url("../images/header/elipse-t@2x.png");
-  }
-}
-.no-display{
-  display:none;
-}
-.menu-toggle,
-.menu-container {
-    visibility: inherit; 
-} 
-.header {
-  &__menu-btn {
-  display: initial;
-  margin-right: -270px;
-  }
-  &__btn-icon {
-  margin-left: 10px;
-  }
-  &__buy-btn {
-    padding-right: 37px;
-  }
-}
-.hero{
-  padding: 0 0 16px 0;
-  align-items: center;
-  overflow: hidden;
-  &__title {
-  font-size: 22px;
-  line-height: 25px;
-  }
-  &__link {
-  font-size: 8px;
-  line-height: 10px;
-  }
-  &__img {
-  margin-top: 70px;
-  width: 152px;
-  width: 190px;
-  }
-}
-.info {
-  margin: 20px 0 0 0;
   &__btn {
-  width: 18px;
-  height: 18px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 11px 23px;
+    background: #d41443;
+    border-radius: 20px;
+    border: none;
   }
-  &__side{
-    width: 114px;
+
+  &__btn--white {
+    color: #d41443;
+    background: #ffffff;
+    &:hover,
+    &:focus {
+      background: #ecebeb;
+      cursor: pointer;
+    }
   }
-  &__text {
-    margin-top: 61px;
-    font-size: 8px;
-    line-height: 150%;
-  }
+
   &__img {
-    width: 152px;
+    display: block;
+    margin: 91px 0 -60px 0;
+    animation: animate-girl 8000ms infinite 1000ms;
+    @keyframes animate-girl {
+      0% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.3);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+  }
+
+  &__link {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #ffffff;
+    text-decoration: none;
+    &--red {
+      color: #d41443;
+    }
+  }
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+  margin: 40px 0 0 0;
+  &__img {
+    animation: animate-milk 7500ms infinite 3000ms;
+    @keyframes animate-milk {
+      0% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.15);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+  }
+
+  &__side {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0;
+  }
+
+  &__text {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    color: #ffffff;
+    margin: 68px 0 0 0;
+  }
+
+  &__btn {
+    width: 26px;
+    height: 26px;
+    border: none;
+    border-radius: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    &:hover,
+    &:focus {
+      background: #ecebeb;
+      cursor: pointer;
+    }
   }
 }
 .sell-point {
-  &__no { 
-    margin:-14px 5px 0 0;
-    font-size: 28px;
-    line-height: 32px;
-  }
-  &__type {
-    font-size: 8px;
-    line-height: 10px; 
-  }
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  padding: 0;
+  align-items: flex-end;
+
   &__item {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
-  &__icon {
-    width: 16px;
-    height: 16px;
-    top:-3px;
-    right:0;
+
+  &__no {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 46px;
+    line-height: 53px;
+    text-align: right;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #d41443;
+    margin: -23px 10px 0 0;
+  }
+
+  &__type {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: right;
+    color: #ffffff;
+    margin: 0;
   }
 }
+@media (max-width: 768px) and (min-width: 321px) {
+  .header-section {
+    padding: 0 16px;
+    background: #ffb8ca;
+    background-repeat: no-repeat;
+    background-image: url('../images/header/header-icecream-t.png'),
+      url('../images/header/elipse-t.png');
+    background-position: top 50% right 57%, top 60% right 43%;
+    padding: 0 32px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .header-section {
+      background-position: top 50% right 57%, top 60% right 43%;
+      background-image: url('../images/header/header-icecream-t@2x.png'),
+        url('../images/header/elipse-t@2x.png');
+    }
+  }
+  .no-display {
+    display: none;
+  }
+  .menu-toggle,
+  .menu-container {
+    visibility: inherit;
+  }
+  .header {
+    &__menu-btn {
+      display: initial;
+      margin-right: -270px;
+    }
+    &__btn-icon {
+      margin-left: 10px;
+    }
+    &__buy-btn {
+      padding-right: 37px;
+    }
+  }
+  .hero {
+    padding: 0 0 16px 0;
+    align-items: center;
+    overflow: hidden;
+    &__title {
+      font-size: 22px;
+      line-height: 25px;
+    }
+    &__link {
+      font-size: 8px;
+      line-height: 10px;
+    }
+    &__img {
+      margin-top: 70px;
+      width: 152px;
+      width: 190px;
+    }
+  }
+  .info {
+    margin: 20px 0 0 0;
+    &__btn {
+      width: 18px;
+      height: 18px;
+    }
+    &__side {
+      width: 114px;
+    }
+    &__text {
+      margin-top: 61px;
+      font-size: 8px;
+      line-height: 150%;
+    }
+    &__img {
+      width: 152px;
+    }
+  }
+  .sell-point {
+    &__no {
+      margin: -14px 5px 0 0;
+      font-size: 28px;
+      line-height: 32px;
+    }
+    &__type {
+      font-size: 8px;
+      line-height: 10px;
+    }
+    &__item {
+      position: relative;
+    }
+    &__icon {
+      width: 16px;
+      height: 16px;
+      top: -3px;
+      right: 0;
+    }
+  }
 }
 @media (max-width: 320px) {
   .header-section {
     padding: 0 16px;
     background: #ffb8ca;
     background-repeat: no-repeat;
-    background-image:  url("../images/header/icecream-m.png"), url("../images/header/elipse-m.png");
-    background-position:  top 95% right 30%, top 60% right 0%;
+    background-image: url('../images/header/icecream-m.png'),
+      url('../images/header/elipse-m.png');
+    background-position: top 95% right 30%, top 60% right 0%;
     padding: 8px 20px 0 20px;
   }
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .header-section {
-    background-position:  top 95% right 30%, top 60% right 0%;
-    background-image: url("../images/header/icecream-m@2x.png") 171px, url("../images/header/elipse-m@2x.png");
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .header-section {
+      background-position: top 95% right 30%, top 60% right 0%;
+      background-image: url('../images/header/icecream-m@2x.png') 171px,
+        url('../images/header/elipse-m@2x.png');
+    }
   }
-}
-.header {
-  padding: 0;
-}
-.hero{
+  .header {
+    padding: 0;
+  }
+  .hero {
     padding: 151px 0 158px 0;
-    &__title{
+    &__title {
       font-size: 26px;
       line-height: 30px;
     }
-  &__img,
+    &__img,
     .sell-point,
-    .info{
-    display:none;
+    .info {
+      display: none;
+    }
   }
-} 
-.no-display {
-  display: none;
-}
-.header{
-  &__buy-btn{
+  .no-display {
     display: none;
   }
-}
-.menu-toggle {
-  visibility: inherit;
-}
+  .header {
+    &__buy-btn {
+      display: none;
+    }
+  }
+  .menu-toggle {
+    visibility: inherit;
+  }
 }
