hero versiunea tableta

--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -26,14 +26,15 @@
         </li>
       </ul>
     </nav>
+    <div class="btn-wrapper">
     <button
-          class="menu-toggle js-open-menu"
+      class="menu-toggle js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
           <svg
-            width="46"
-            height="32"
+            width="20"
+            height="20"
            viewBox="0 0 46 32"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -49,6 +50,7 @@
         <use href="./images/sprite.svg#icon-Vector-1"></use>
       </svg></span>
     </button>
+    </div>
   </div>
 
 
