--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -22,8 +22,7 @@ transition: background-color 250ms $main-transition-timing-function;
 
 
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
+  
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,15 +119,15 @@ transition: background-color 250ms $main-transition-timing-function;
     }
   }
   
-  @media (min-width: 768px) {
-    .menu-toggle {
-      display: none;
-    }
-  }
-  
+   
   @media (max-width: 767px) {
     .menu {
       display: none;
     }
   }
   
+  @media screen and (min-width: 1280px) {
+    .menu-toggle {
+      display: none;
+    }
+  }
